@@ -21,123 +21,104 @@ import de.se_rwth.commons.logging.Log;
 import java.util.stream.Collectors;
 
 public class CDBasisSymbolTableCompleter implements CDBasisVisitor2, OOSymbolsVisitor2 {
-
+  
   protected CDBasisTraverser traverser;
-
+  
   protected ISynthesize typeSynthesizer;
   protected CDBasisFullPrettyPrinter prettyPrinter;
-
+  
   public CDBasisSymbolTableCompleter(ISynthesize typeSynthesizer) {
     this.typeSynthesizer = typeSynthesizer;
     prettyPrinter = new CDBasisFullPrettyPrinter(new IndentPrinter());
   }
-
+  
   public CDBasisSymbolTableCompleter() {
     this(new FullSynthesizeFromMCBasicTypes());
   }
-
+  
   @Override
   public void visit(ASTCDCompilationUnit node) {
     final ICDBasisScope artifactScope = node.getCDDefinition().getEnclosingScope();
     if (artifactScope instanceof ICD4AnalysisArtifactScope) {
-      ((ICD4AnalysisArtifactScope) artifactScope)
-          .addAllImports(
-              node.getMCImportStatementList().stream()
-                  .map(i -> new ImportStatement(i.getQName(), i.isStar()))
-                  .collect(Collectors.toList()));
+      ((ICD4AnalysisArtifactScope) artifactScope).addAllImports(node.getMCImportStatementList()
+          .stream().map(i -> new ImportStatement(i.getQName(), i.isStar())).collect(Collectors
+              .toList()));
     }
   }
-
+  
   @Override
   public void visit(ASTCDClass node) {
-
+    
     final CDTypeSymbol symbol = node.getSymbol();
-
+    
     if (node.isPresentCDExtendUsage()) {
-      symbol.addAllSuperTypes(
-          node.getCDExtendUsage()
-              .streamSuperclass()
-              .map(
-                  s -> {
-                    final TypeCheckResult result = getTypeSynthesizer().synthesizeType(s);
-                    if (!result.isPresentResult()) {
-                      Log.error(
-                          String.format(
-                              "0xCDA00: The type of the extended classes (%s) could not be calculated",
-                              CDBasisMill.prettyPrint(s, false)),
-                          s.get_SourcePositionStart());
-                    }
-                    return result;
-                  })
-              .filter(TypeCheckResult::isPresentResult)
-              .map(TypeCheckResult::getResult)
-              .collect(Collectors.toList()));
+      symbol.addAllSuperTypes(node.getCDExtendUsage().streamSuperclass().map(s -> {
+        final TypeCheckResult result = getTypeSynthesizer().synthesizeType(s);
+        if (!result.isPresentResult()) {
+          Log.error(String.format(
+              "0xCDA00: The type of the extended classes (%s) could not be calculated", CDBasisMill
+                  .prettyPrint(s, false)), s.get_SourcePositionStart());
+        }
+        return result;
+      }).filter(TypeCheckResult::isPresentResult).map(TypeCheckResult::getResult).collect(Collectors
+          .toList()));
     }
-
+    
     if (node.isPresentCDInterfaceUsage()) {
-      symbol.addAllSuperTypes(
-          node.getCDInterfaceUsage()
-              .streamInterface()
-              .map(
-                  s -> {
-                    final TypeCheckResult result = getTypeSynthesizer().synthesizeType(s);
-                    if (!result.isPresentResult()) {
-                      Log.error(
-                          String.format(
-                              "0xCDA01: The type of the interface (%s) could not be calculated",
-                              s.getClass().getSimpleName()),
-                          s.get_SourcePositionStart());
-                    }
-                    return result;
-                  })
-              .filter(TypeCheckResult::isPresentResult)
-              .map(TypeCheckResult::getResult)
-              .collect(Collectors.toList()));
+      symbol.addAllSuperTypes(node.getCDInterfaceUsage().streamInterface().map(s -> {
+        final TypeCheckResult result = getTypeSynthesizer().synthesizeType(s);
+        if (!result.isPresentResult()) {
+          Log.error(String.format("0xCDA01: The type of the interface (%s) could not be calculated",
+              s.getClass().getSimpleName()), s.get_SourcePositionStart());
+        }
+        return result;
+      }).filter(TypeCheckResult::isPresentResult).map(TypeCheckResult::getResult).collect(Collectors
+          .toList()));
     }
   }
-
+  
   @Override
   public void endVisit(ASTCDClass node) {
     assert node.getSymbol() != null;
     initialize_CDClass(node);
     CDBasisVisitor2.super.endVisit(node);
   }
-
+  
   protected void initialize_CDClass(ASTCDClass ast) {
     CDTypeSymbol symbol = ast.getSymbol();
     symbol.setIsClass(true);
     setupModifiers(ast.getModifier(), symbol);
   }
-
+  
   @Override
   public void visit(ASTCDAttribute node) {
     final FieldSymbol symbol = node.getSymbol();
-
+    
     // Compute the !final! SymTypeExpression for the type of the field
     final TypeCheckResult typeResult = getTypeSynthesizer().synthesizeType(node.getMCType());
     if (!typeResult.isPresentResult()) {
-      Log.error(
-          String.format(
-              "0xCDA02: The type (%s) of the attribute (%s) could not be calculated",
-              CDBasisMill.prettyPrint(node.getMCType(), false), node.getName()),
-          node.getMCType().get_SourcePositionStart());
-    } else {
+      Log.error(String.format(
+          "0xCDA02: The type (%s) of the attribute (%s) could not be calculated", CDBasisMill
+              .prettyPrint(node.getMCType(), false), node.getName()), node.getMCType()
+                  .get_SourcePositionStart());
+    }
+    else {
       symbol.setType(typeResult.getResult());
     }
   }
-
+  
   @Override
   public void endVisit(ASTCDAttribute node) {
     assert node.getSymbol() != null;
     initialize_CDAttribute(node);
     CDBasisVisitor2.super.endVisit(node);
   }
-
+  
   protected void initialize_CDAttribute(ASTCDAttribute ast) {
     FieldSymbol symbol = ast.getSymbol();
     setupModifiers(ast.getModifier(), symbol);
   }
-
+  
   public void setupModifiers(ASTModifier modifier, CDTypeSymbol typeSymbol) {
     typeSymbol.setIsPublic(modifier.isPublic());
     typeSymbol.setIsPrivate(modifier.isPrivate());
@@ -146,7 +127,7 @@ public class CDBasisSymbolTableCompleter implements CDBasisVisitor2, OOSymbolsVi
     typeSymbol.setIsAbstract(modifier.isAbstract());
     typeSymbol.setIsDerived(modifier.isDerived());
   }
-
+  
   public void setupModifiers(ASTModifier modifier, FieldSymbol fieldSymbol) {
     fieldSymbol.setIsPublic(modifier.isPublic());
     fieldSymbol.setIsPrivate(modifier.isPrivate());
@@ -155,20 +136,15 @@ public class CDBasisSymbolTableCompleter implements CDBasisVisitor2, OOSymbolsVi
     fieldSymbol.setIsFinal(modifier.isFinal());
     fieldSymbol.setIsDerived(modifier.isDerived());
   }
-
-  public ISynthesize getTypeSynthesizer() {
-    return typeSynthesizer;
-  }
-
+  
+  public ISynthesize getTypeSynthesizer() { return typeSynthesizer; }
+  
   public void setTypeSynthesizer(ISynthesize typeSynthesizer) {
     this.typeSynthesizer = typeSynthesizer;
   }
-
-  public CDBasisTraverser getTraverser() {
-    return traverser;
-  }
-
-  public void setTraverser(CDBasisTraverser traverser) {
-    this.traverser = traverser;
-  }
+  
+  public CDBasisTraverser getTraverser() { return traverser; }
+  
+  public void setTraverser(CDBasisTraverser traverser) { this.traverser = traverser; }
+  
 }
